z-index fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ img{
 
 input{
     width: 125px;
-    z-index: 1;
+    z-index: 10;
 }
 
 canvas{
@@ -83,7 +83,7 @@ button.inner-div{
     background-color: #bbc6c9;
     position: relative;
     border: 1px outset #818283;
-    /* z-index: 99; */
+    z-index: 1;
 }
 
 ul.menu a li{
